2001-02-26  Martin Baulig  <baulig@suse.de>

	* gnome-stock.h: Put this back to the API of GNOME 1.x.
	- reverted to the state of gnome-libs stable.
	- removed USE_NEW_GNOME_STOCK conditional; only use the
	USE_NEW_GNOME_STOCK code.

	* gnome-stock.[ch]: Tagged them as `before-martin-reverted-it'.

2001-02-25  Martin Baulig  <baulig@suse.de>

	* gnome-entry.[ch]: Move all deprecated functions to libcompat.
	* gnome-icon-entry.[ch]: Likewise.
	* gnome-appbar.[ch]: Likewise.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-entry.c (gnome_entry_set_text, gnome_entry_get_text):
	New convenience functions; we need to add them to gnome-libs stable
	shortly after GNOME 1.4 as well so that people can start to smoothly
	migrate their apps to the new API.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* libgnomeui-2.0.pc.in: New file.
	* Makefile.am: Install pkg-config file.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-calculator.[ch], gnome-number-entry.[ch]: Moved to
	libcompat for the moment. This should be anywhere, but not in
	libgnomeui; GnomeCalculator should be a Bonobo component.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-pixmap-entry.[ch]: Moved to libcompat. This has been
	obsoleted by GnomeIconEntry.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-icon-entry.c (gnome_icon_entry_set_preview_size):
	New function; inspired by gnome_pixmap_entry_set_preview_size().
	Added "preview_x" and "preview_y" properties.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-file-entry.[ch]: Moved to libcompat. This has been replaced
	by GnomeFileSelector.

	* gnome-gconf.c (gnome_file_entry_get/set): Removed.
	(gnome_icon_entry_get/set): Removed.
	(gnome_pixmap_entry_get/set): Removed.
	(gnome_entry_get/set): Removed.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-canvas.h (GnomeCanvas): Removed `cc' field, GdkColorContext
	no longer exists in GTK+.

	* gnome-canvas.c (gnome_canvas_get_color): Use gdk_rgb_find_color()